--- a/simple-parent/pom.xml
+++ b/simple-parent/pom.xml
@@ -19,7 +19,7 @@
     <module>simple-weather</module>
     <module>simple-persist</module>
     <module>simple-webapp</module>
-  </modules> bvc
+  </modules>
   <build>
     <pluginManagement>
     <plugins>
