--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,17 @@
   <modules>
     <module>simple-parent</module>
   </modules>
+         <distributionManagement>
+		<snapshotRepository>
+			<id>devopsSnapshots</id>
+			<name>devopsSnapshots</name>
+			<url>http://node02.example.com:8081/nexus/content/repositories/devopsSnapshots</url>
+		</snapshotRepository>
+		<repository>
+		<id>devopsReleases</id>
+			<name>devopsReleases</name>
+			<url>http://node02.example.com:8081/nexus/content/repositories/devopsReleases</url>
+		</repository>
+
+	</distributionManagement>
 </project>
